{
  "version": 4,
  "terraform_version": "1.5.6",
  "serial": 50,
  "lineage": "24a50138-a2c3-29b7-7a6a-ddd3740fc6a9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08e1565cfe096c330",
            "domain": "vpc",
            "id": "eipalloc-08e1565cfe096c330",
            "network_border_group": "ap-southeast-2",
            "public_dns": "ec2-13-211-220-251.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "13.211.220.251",
            "public_ipv4_pool": "amazon",
            "tags_all": {
              "example": "example-terraform-ecs"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:291208963174:internet-gateway/igw-0ea8e4a58deb13cc5",
            "id": "igw-0ea8e4a58deb13cc5",
            "owner_id": "291208963174",
            "tags_all": {
              "example": "example-terraform-ecs"
            },
            "vpc_id": "vpc-01a2b85211f187275"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:291208963174:loadbalancer/app/tf-lb-20230903050809550500000001/f84e985bfbef8b88",
            "arn_suffix": "app/tf-lb-20230903050809550500000001/f84e985bfbef8b88",
            "desync_mitigation_mode": "defensive",
            "dns_name": "tf-lb-20230903050809550500000001-1155208775.ap-southeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:291208963174:loadbalancer/app/tf-lb-20230903050809550500000001/f84e985bfbef8b88",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "tf-lb-20230903050809550500000001",
            "preserve_host_header": false,
            "security_groups": [
              "sg-07a1179e0d2fe312c",
              "sg-0e88e49083db2944d",
              "sg-0f44ed6468ea7ac2d"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-004b45ff52aa4029c"
              },
              {
                "subnet_id": "subnet-0d8a65b14026629db"
              }
            ],
            "subnets": [
              "subnet-004b45ff52aa4029c",
              "subnet-0d8a65b14026629db"
            ],
            "tags_all": {
              "example": "example-terraform-ecs"
            },
            "vpc_id": "vpc-01a2b85211f187275",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1GM3OXH4ZPM65"
          },
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_security_group.egress_all",
            "aws_security_group.http",
            "aws_security_group.https",
            "aws_subnet.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:291208963174:listener/app/tf-lb-20230903050809550500000001/f84e985bfbef8b88/681a6dc42ad6cf5c",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:291208963174:targetgroup/tf-20230903051021674800000003/8f4c02c970d22896",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:291208963174:listener/app/tf-lb-20230903050809550500000001/f84e985bfbef8b88/681a6dc42ad6cf5c",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:291208963174:loadbalancer/app/tf-lb-20230903050809550500000001/f84e985bfbef8b88",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {
              "example": "example-terraform-ecs"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_lb.this",
            "aws_lb_target_group.this",
            "aws_security_group.egress_all",
            "aws_security_group.http",
            "aws_security_group.https",
            "aws_subnet.public",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:291208963174:targetgroup/tf-20230903051021674800000003/8f4c02c970d22896",
            "arn_suffix": "targetgroup/tf-20230903051021674800000003/8f4c02c970d22896",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:291208963174:targetgroup/tf-20230903051021674800000003/8f4c02c970d22896",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tf-20230903051021674800000003",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "example": "example-terraform-ecs"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-01a2b85211f187275"
          },
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_lb.this",
            "aws_security_group.egress_all",
            "aws_security_group.http",
            "aws_security_group.https",
            "aws_subnet.public",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08e1565cfe096c330",
            "association_id": "eipassoc-0b050bde9ed4012b8",
            "connectivity_type": "public",
            "id": "nat-08058805bc110e4de",
            "network_interface_id": "eni-085016a9a34a4707e",
            "private_ip": "10.0.0.160",
            "public_ip": "13.211.220.251",
            "subnet_id": "subnet-0d8a65b14026629db",
            "tags_all": {
              "example": "example-terraform-ecs"
            }
          },
          "dependencies": [
            "aws_eip.this",
            "aws_internet_gateway.this",
            "aws_subnet.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-089be1179201e3df91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-08058805bc110e4de",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-089be1179201e3df9",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.this",
            "aws_internet_gateway.this",
            "aws_nat_gateway.this",
            "aws_route_table.private",
            "aws_subnet.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0ea8e4a58deb13cc5",
            "id": "r-rtb-0a4903df6481829331080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a4903df648182933",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_route_table.public",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:291208963174:route-table/rtb-089be1179201e3df9",
            "id": "rtb-089be1179201e3df9",
            "owner_id": "291208963174",
            "propagating_vgws": [],
            "route": [],
            "tags": {},
            "tags_all": {
              "example": "example-terraform-ecs"
            },
            "timeouts": null,
            "vpc_id": "vpc-01a2b85211f187275"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:291208963174:route-table/rtb-0a4903df648182933",
            "id": "rtb-0a4903df648182933",
            "owner_id": "291208963174",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ea8e4a58deb13cc5",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {
              "example": "example-terraform-ecs"
            },
            "timeouts": null,
            "vpc_id": "vpc-01a2b85211f187275"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09cf8b9a2b2170f18",
            "route_table_id": "rtb-089be1179201e3df9",
            "subnet_id": "subnet-0e9b9f2ee299b03fa"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02de538006aafe2e4",
            "route_table_id": "rtb-089be1179201e3df9",
            "subnet_id": "subnet-0e27b03d682354312"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03c9921c657737995",
            "route_table_id": "rtb-0a4903df648182933",
            "subnet_id": "subnet-0d8a65b14026629db"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03234224e80105b2f",
            "route_table_id": "rtb-0a4903df648182933",
            "subnet_id": "subnet-004b45ff52aa4029c"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "egress_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:291208963174:security-group/sg-07a1179e0d2fe312c",
            "description": "Permit all outgoing traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07a1179e0d2fe312c",
            "ingress": [],
            "name": "egress-all",
            "name_prefix": "",
            "owner_id": "291208963174",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "example": "example-terraform-ecs"
            },
            "timeouts": null,
            "vpc_id": "vpc-01a2b85211f187275"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:291208963174:security-group/sg-0f44ed6468ea7ac2d",
            "description": "Permit incoming HTTP traffic",
            "egress": [],
            "id": "sg-0f44ed6468ea7ac2d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "http",
            "name_prefix": "",
            "owner_id": "291208963174",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "example": "example-terraform-ecs"
            },
            "timeouts": null,
            "vpc_id": "vpc-01a2b85211f187275"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:291208963174:security-group/sg-0e88e49083db2944d",
            "description": "Permit incoming HTTPS traffic",
            "egress": [],
            "id": "sg-0e88e49083db2944d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "https",
            "name_prefix": "",
            "owner_id": "291208963174",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "example": "example-terraform-ecs"
            },
            "timeouts": null,
            "vpc_id": "vpc-01a2b85211f187275"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ingress_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:291208963174:security-group/sg-0d94ad042c657f5d7",
            "description": "Permit some incoming traffic",
            "egress": [],
            "id": "sg-0d94ad042c657f5d7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "ingress-esc-service",
            "name_prefix": "",
            "owner_id": "291208963174",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "example": "example-terraform-ecs"
            },
            "timeouts": null,
            "vpc_id": "vpc-01a2b85211f187275"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:291208963174:subnet/subnet-0e9b9f2ee299b03fa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e9b9f2ee299b03fa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "291208963174",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags_all": {
              "example": "example-terraform-ecs"
            },
            "vpc_id": "vpc-01a2b85211f187275"
          },
          "dependencies": [
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:291208963174:subnet/subnet-0e27b03d682354312",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e27b03d682354312",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "291208963174",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags_all": {
              "example": "example-terraform-ecs"
            },
            "vpc_id": "vpc-01a2b85211f187275"
          },
          "dependencies": [
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:291208963174:subnet/subnet-0d8a65b14026629db",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d8a65b14026629db",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "291208963174",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags_all": {
              "example": "example-terraform-ecs"
            },
            "vpc_id": "vpc-01a2b85211f187275"
          },
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:291208963174:subnet/subnet-004b45ff52aa4029c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-004b45ff52aa4029c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "291208963174",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags_all": {
              "example": "example-terraform-ecs"
            },
            "vpc_id": "vpc-01a2b85211f187275"
          },
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:291208963174:vpc/vpc-01a2b85211f187275",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e426947c8d5c9c95",
            "default_route_table_id": "rtb-020a490f6c1ee4b41",
            "default_security_group_id": "sg-0382f6398f3da5ffa",
            "dhcp_options_id": "dopt-0c00362e3fc2fd64b",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01a2b85211f187275",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-020a490f6c1ee4b41",
            "owner_id": "291208963174",
            "tags_all": {
              "example": "example-terraform-ecs"
            }
          }
        }
      ]
    }
  ]
}